ShardRemote does not notify the ReplicaSetMonitor on write concern failures

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.3.10
    • Affects Version/s: 3.3.9
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Sharding 17 (07/15/16)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The ShardRemote::_runCommand does not notify the replica set monitor for write concern errors, which causes the RSM to return the same host over and over again and never attempting to discover a new primary.

      This makes the auto-retry logic for config server commands not reliable and causes failures in the sharding continuous stepdown suite.

            Assignee:
            Kaloian Manassiev
            Reporter:
            Kaloian Manassiev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: