SERVER-24827 Notify ReplicaSetMonitor on write concern errors