src/mongo/s/client/shard_remote.cpp
@@ -241,7 +241,10 @@ StatusWith<Shard::CommandResponse> ShardRemote::_runCommand(OperationContext* tx
     BSONObj responseMetadata = swResponse.getValue().metadata.getOwned();
     Status commandStatus = getStatusFromCommandResult(responseObj);
     Status writeConcernStatus = getWriteConcernStatusFromCommandResult(responseObj);
+
+    // Tell the replica set monitor of any errors
     updateReplSetMonitor(host.getValue(), commandStatus);
+    updateReplSetMonitor(host.getValue(), writeConcernStatus);
 
     return CommandResponse(std::move(responseObj),
                            std::move(responseMetadata),
